-*- coding: utf-8-unix -*-

			News file for CCStructs
			=======================

Revision 0.2.0-devel.1
----------------------

* Package infrastructure development.


Revision 0.2.0-devel.0
----------------------

* Development of build infrastructure.

* Renamed "dtors" interface to "dtor".

* Added experimental header file "ccnames.h".

* BACKWARDS  INCOMPATIBILITY The  code started  using the  facilities of
  "ccnames.h".

* BACKWARDS INCOMPATIBILITY Renamed the interface "ccstructs_writable_I"
  to "ccstructs_dumpable_I".

* BACKWARDS  INCOMPATIBILITY  Renamed  the  serialisation  interface  to
  "ccstructs_serialiser_I" and "ccstructs_deserialiser_I".


Revision 0.1.0-devel.2
----------------------

* Added macro "ccstructs_core()".

* Added "pathname" interface.

* BACKWARDS INCOMPATIBILITY Renamed some types from "_iface_" to "_I_".


Revision 0.1.0-devel.1
----------------------

* BACKWARDS INCOMPATIBILITY Rewritten the "writable" interface to not be
  tied to standard streams for output.


Revision 0.1.0-devel.0
----------------------

* Initial development release.


### end of file
# Local Variables:
# mode: text
# fill-column: 72
# paragraph-start: "*"
# ispell-local-dictionary: "en_GB"
# End: